--- a/assets/style.css
+++ b/assets/style.css
@@ -6,10 +6,10 @@
 body {
     background-color: #fbfbfba8;
 }
-
-header {
+ header {
     margin-bottom: 50px;
 }
+
 
 h1, h3 {
     font-family: 'Courier Prime', monospace;
@@ -17,8 +17,7 @@ h1, h3 {
 }
 
 h1 {
-    text-align: center;
-    
+    text-align: center;    
     padding: 50px;
     padding-bottom: 10px;
     font-size: 50px;
@@ -26,31 +25,53 @@ h1 {
 
 h2 {
     text-align: center;
-    padding-bottom: 10px;
+    padding: 10px;
+    margin-top: 10px;
     overflow: hidden;
-
     /* font-family: 'Patrick Hand', cursive; */
 }
 
 
-h3 {    font-size: 22px;
+h3 {    
+    font-size: 22px;
     margin: 10px;
 }
 
-main {
-    /* background-color: blue; */
-    text-align: center;
-    max-width: 1400px;
-    min-width: 600px;
-    margin: auto;
-    
+/* main {
+    background-color: blue;
 }
 
 section {
-    /* background-color: red; */
-    /* position: relative; */
-    text-align: center;
-    /* height: 500px; */
+    background-color: red;
+}
+div {
+    margin: 5px;
+    min-height: 400px;
+    min-width: 300px;
+    float: left;
+    background-color: #eee3d6b4;
+} */
+
+
+
+
+
+
+
+
+
+
+
+main {
+    background-color: blue;
+    max-width: 1400px;
+    min-width: 100px;
+    margin: auto;
+}
+
+section {
+    background-color: red;    
+    overflow: auto;
 }
 
 
@@ -61,12 +82,14 @@ section {
 }
 
 div {
-    /* position: absolute; */
+    text-align: center;
     min-width: 250px;
     max-width: 400px;
     min-height: 400px;
-    display: inline-block;
+    display: block;
     margin: 5px;
-
+    margin-bottom: 25px;
     background-color: #eee3d652;
-}
+    float: left;
+    
+} 
