--- a/assets/style.css
+++ b/assets/style.css
@@ -37,20 +37,21 @@ h3 {
 }
 
 main {
-    /* background-color: blue; */
+    background-color: blue;
     max-width: 1400px;
     min-width: 100px;
     margin: auto;
 }
 
 section {
-    /* background-color: red;     */
+    background-color: red;    
     overflow: auto;
     text-align: center;
+    position: relative;
 }
 
 #week {
-    background-color: none;
+    background-color: green;
 }
 
 
@@ -58,7 +59,7 @@ section {
     margin: auto;
 }
 
-div {
+.tasks {
     display: inline-block;
     text-align: center;
     min-width: 350px;
@@ -72,10 +73,20 @@ div {
     
 } 
 
+.input {
+    background-color: #a6958069;
+    height: 50px;
+    display: inline-block;
+    width: 340px;
+    border-radius: 10px;
+    margin-left: 2px;  
+    padding-right: 5px;  
+}
+
 input {
     font-size: 20px;
     /* background-color: blueviolet; */
-    width: 330px;
+    width: 280px;
     height: 35px;
     border-radius: 5px;
     /* border: 5px solid rgba(128, 128, 128, 0.445); */
@@ -84,15 +95,27 @@ input {
     margin-top: 5px;
 }
 
-.input {
-    background-color: #a6958069;
-    height: 50px;    
-}
-
-.lixo {
+.enviar {
     width: 30px;
-    background-color: ivory;
-    border-radius: 5px;
     margin-top: 10px;
     float: right;
+    /* padding-left: 15px; */
 }
+.enviar:hover {
+    background-color: ivory;
+    border-radius: 5px;
+}
+
+ul {
+    /* text-align: none; */
+    font-size: 25px;
+    display: inline-block;
+    position: relative;
+    /* margin-left: 20px; */
+}
+
+li {
+    position: relative;
+    float: left;
+}
+
