--- a/assets/style.css
+++ b/assets/style.css
@@ -34,24 +34,23 @@ h2 {
 h3 {    
     font-size: 22px;
     margin: 10px;
+    text-align: center;
 }
 
 main {
-    background-color: blue;
-    max-width: 1400px;
+    /* background-color: blue; */
+    width: 90vw;
     min-width: 100px;
     margin: auto;
 }
 
 section {
-    background-color: red;    
-    overflow: auto;
+    /* background-color: blue;     */
     text-align: center;
-    position: relative;
 }
 
 #week {
-    background-color: green;
+    /* background-color: green; */
 }
 
 
@@ -61,14 +60,13 @@ section {
 
 .tasks {
     display: inline-block;
-    text-align: center;
-    min-width: 350px;
-    max-width: 400px;
+    width: 360px;
     height: 500px;
     margin: 5px;
     margin-bottom: 25px;
     background-color: #eee3d6;
     border-radius: 10px;
+    overflow: hidden;
     /* float: left; */
     
 } 
@@ -89,7 +87,6 @@ input {
     width: 280px;
     height: 35px;
     border-radius: 5px;
-    /* border: 5px solid rgba(128, 128, 128, 0.445); */
     background-color: #A69580;
     margin-left: 5px;
     margin-top: 5px;
@@ -99,23 +96,23 @@ input {
     width: 30px;
     margin-top: 10px;
     float: right;
-    /* padding-left: 15px; */
 }
 .enviar:hover {
     background-color: ivory;
     border-radius: 5px;
+    padding: 2px;
 }
 
-ul {
-    /* text-align: none; */
-    font-size: 25px;
-    display: inline-block;
-    position: relative;
-    /* margin-left: 20px; */
-}
-
-li {
-    position: relative;
+p {
+    word-break: break-all;
+    box-sizing: border-box;
+    text-align: left;
+    padding: 10px;
+    width: 340px;
+    margin: 10px;
+    font-size: 22px;
+    background-color: rgba(255, 255, 255, 0.5);
     float: left;
+    border-radius: 5px;
 }
 
