--- a/assets/style.css
+++ b/assets/style.css
@@ -1,118 +1,83 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    color: white;
 }
 
 body {
-    background-color: #fbfbfba8;
-}
- header {
-    margin-bottom: 50px;
+    background-color: #3F6CA6;
 }
 
-
-h1, h3, h2 {
-    font-family: 'Courier Prime', monospace;
-    color: #262014;
-}
-
-h1 {
-    text-align: center;    
-    padding: 50px;
-    padding-bottom: 10px;
-    font-size: 50px;
-}
-
-h2 {
-    font-size: 30px;
+header {
+    color: black;
     text-align: center;
-    padding: 10px;
-    margin-top: 10px;
-    overflow: hidden;
-    /* font-family: 'Patrick Hand', cursive; */
-}
-h3 {    
-    font-size: 22px;
-    margin: 10px;
-    text-align: center;
+    padding: 75px 0 30px;
+    font-size: 1.8rem;
 }
 
-main {
-    /* background-color: blue; */
-    width: 90vw;
-    min-width: 100px;
+main h2 {
+    background-color: #E1D3AA;
+    text-align: center;
+    font-size: 1.8rem;
+    padding: 15px 0;
+    max-width: 1550px;
     margin: auto;
+    border-radius: 20px
 }
 
-section {
-    /* background-color: blue;     */
+#week, #weekend{
+    /* background-color: black; */
+    max-width: 1550px;
+    margin: 0 auto;
+    display: flex;
+    /* justify-content: space-between; */
+    padding: 0 10px;
+    flex-wrap: wrap;
     text-align: center;
 }
+h3 {
+    text-align: center;
+    font-size: 1.6rem;
+    padding: 15px 0;
+    color: #261308;
 
-#week {
-    /* background-color: green; */
 }
-
-
-.title {
-    margin: auto;
-}
-
-.tasks {
-    display: inline-block;
-    width: 360px;
-    height: 500px;
+p{
+    color: black;
+    /* background-color: rgba(0, 0, 0, 0.219); */
+    background-color: #ACD1F2;
     margin: 5px;
-    margin-bottom: 25px;
-    background-color: #eee3d6;
-    border-radius: 10px;
-    overflow: hidden;
-    /* float: left; */
-    
-} 
+    padding: 5px;
+    border-radius: 5px;
+    word-break: break-all;
+    font-size: 1.4rem;
 
-.input {
-    background-color: #a6958069;
-    height: 50px;
-    display: inline-block;
-    width: 340px;
-    border-radius: 10px;
-    margin-left: 2px;  
-    padding-right: 5px;  
 }
 
 input {
-    font-size: 20px;
-    /* background-color: blueviolet; */
-    width: 280px;
-    height: 35px;
-    border-radius: 5px;
-    background-color: #A69580;
-    margin-left: 5px;
-    margin-top: 5px;
+    width: 240px;
+    min-height: 40px;
+    border-radius: 7px;
+    padding-left: 7px;
+    color: #261308;
+    font-size: 1.1rem;
+}
+.tasks {
+    width: 300px;
+    height: 500px;
+    background-color: #F2F2F2;
+    border-radius: 20px;
+    margin: 10px auto;
+    flex: 0 1 auto;
+    text-align: center; 
+    border: 10px solid #3F6CA6;
+
 }
 
-.enviar {
-    width: 30px;
-    margin-top: 10px;
+main img {
+    width: 25px;
     float: right;
+    padding-top: 6px;
+    margin-right: 20px;
 }
-.enviar:hover {
-    background-color: ivory;
-    border-radius: 5px;
-    padding: 2px;
-}
-
-p {
-    word-break: break-all;
-    box-sizing: border-box;
-    text-align: left;
-    padding: 10px;
-    width: 340px;
-    margin: 10px;
-    font-size: 22px;
-    background-color: rgba(255, 255, 255, 0.5);
-    float: left;
-    border-radius: 5px;
-}
-
