--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,8 @@ main h2 {
     padding: 15px 0;
     max-width: 1550px;
     margin: auto;
-    border-radius: 20px
+    border-radius: 20px;
+    color: #261308;
 }
 
 #week, #weekend{
@@ -52,6 +53,7 @@ p{
     border-radius: 5px;
     word-break: break-all;
     font-size: 1.4rem;
+    text-align: left;
 
 }
 
@@ -64,7 +66,7 @@ input {
     font-size: 1.1rem;
 }
 .tasks {
-    width: 300px;
+    width: 350px;
     height: 500px;
     background-color: #F2F2F2;
     border-radius: 20px;
@@ -72,6 +74,7 @@ input {
     flex: 0 1 auto;
     text-align: center; 
     border: 10px solid #3F6CA6;
+    overflow: hidden;
 
 }
 
