--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,7 @@ main h2 {
     text-align: center;
     font-size: 1.8rem;
     padding: 15px 0;
-    max-width: 1550px;
+    max-width: 1850px;
     margin: auto;
     border-radius: 20px;
     color: #261308;
@@ -54,16 +54,29 @@ p{
     word-break: break-all;
     font-size: 1.4rem;
     text-align: left;
+    display: inline-block;
+    width: 280px;
 
 }
 
+.botton, .botton2{
+    position: relative;
+}
+
+.input {
+    text-align: left;
+}
+
 input {
-    width: 240px;
+    width: 270px;
     min-height: 40px;
     border-radius: 7px;
     padding-left: 7px;
     color: #261308;
     font-size: 1.1rem;
+    /* margin: auto; */
+    margin-left: 10px;
+    
 }
 .tasks {
     width: 350px;
@@ -78,9 +91,27 @@ input {
 
 }
 
-main img {
+.enviar {
     width: 25px;
-    float: right;
-    padding-top: 6px;
+    position: absolute;
+    /* float: right; */
+    padding-top: 8px;
+    margin-left: 10px;
+    /* display: inline-block; */
+    
+}
+
+.apagar {
+    height: 35px;
     margin-right: 5px;
+    background-color: #87bff0;
+    padding: 5px;
+    position: absolute;
+    margin-top: 5px;
+    border-radius: 5px;
+}
+
+#d1, #d2, #d3, #d4, #d5, #d6, #d7 {
+    /* position: absolute; */
+    text-align: left;
 }
