--- a/assets/style.css
+++ b/assets/style.css
@@ -62,6 +62,9 @@ p{
 .botton, .botton2{
     position: relative;
 }
+.botton2 {
+    text-align: right;
+}
 
 .input {
     text-align: left;
@@ -109,6 +112,7 @@ input {
     position: absolute;
     margin-top: 5px;
     border-radius: 5px;
+    /* float: right; */
 }
 
 #d1, #d2, #d3, #d4, #d5, #d6, #d7 {
